--- a/src/test/resources/dev.properties
+++ b/src/test/resources/dev.properties
@@ -1,14 +1,21 @@
-testdata.item.name = "TestName"
-testdata.item.color = "TestColor"
-testdata.item.size = "TestSize"
-testdata.item.price = "TestPrice"
-testdata.item.amount = "TestAmount"
+testdata.item.first.name = TREFOIL HOODIE
+testdata.item.first.color = Medium Grey Heather
+testdata.item.first.size = M
+testdata.item.first.price = $65
+testdata.item.first.amount = 1 ITEM
 
-testdata.user.firstname = "TestFirstName"
-testdata.user.lastname = "TestLastName"
-testdata.user.address = "TestAddress"
-testdata.user.email = "TestEmail"
-testdata.user.phonenumber = "TestPhoneNumber"
+testdata.item.second.name = TREFOIL HOODIE
+testdata.item.second.color = MEDIUM GREY HEATHER
+testdata.item.second.size = M (US Men)
+testdata.item.second.price = $130.00
+testdata.item.second.amount = 2
+
+
+testdata.user.firstname = TestFirstName
+testdata.user.lastname = TestLastName
+testdata.user.address = TestAddress
+testdata.user.email = TestEmail
+testdata.user.phonenumber = TestPhoneNumber
 
 
 
