--- a/src/test/resources/staging.properties
+++ b/src/test/resources/staging.properties
@@ -10,6 +10,12 @@ testdata.item.second.size = M (US Men)
 testdata.item.second.price = $130.00
 testdata.item.second.amount = 2
 
+testdata.item.third.name = D.O.N. ISSUE #2 SHOES
+testdata.item.third.color = PURPLE TINT / CREAM WHITE / SILVER METALLIC
+testdata.item.third.size = 9.5 (US Men)
+testdata.item.third.price = $100.00
+testdata.item.third.amount = 1
+
 
 testdata.user.firstname = TestFirstName
 testdata.user.lastname = TestLastName
