--- a/src/test/resources/staging.properties
+++ b/src/test/resources/staging.properties
@@ -20,8 +20,8 @@ testdata.item.third.amount = 1
 testdata.user.firstname = TestFirstName
 testdata.user.lastname = TestLastName
 testdata.user.address = TestAddress
-testdata.user.email = TestEmail
-testdata.user.phonenumber = TestPhoneNumber
+testdata.user.email = TestEmail@gmail.com
+testdata.user.phonenumber = 1234567890
 
 
 
